@@ -18,6 +18,11 @@ namespace snowstar {
 namespace app {
 namespace snowcooler {
 
+/**
+ * \brief Display a help message
+ *
+ * \param progname	the name of the program
+ */
 static void	usage(const std::string& progname) {
 	astro::Path	path(progname);
 	std::string	p = std::string("    ") + path.basename();
@@ -25,12 +30,13 @@ static void	usage(const std::string& progname) {
 	std::cout << std::endl;
 	std::cout << p << " [ options ] [ <server> ] help" << std::endl;
 	std::cout << p << " [ options ] <server> list" << std::endl;
-	std::cout << p << " [ options ] <server> monitor <cooler>" << std::endl;
-	std::cout << p << " [ options ] <server> info <cooler>" << std::endl;
-	std::cout << p << " [ options ] <server> { on | off }<cooler>" << std::endl;
-	std::cout << p << " [ options ] <server> set <cooler> <temperature>"
+	std::cout << p << " [ options ] <server> <cooler> monitor" << std::endl;
+	std::cout << p << " [ options ] <server> <cooler> info" << std::endl;
+	std::cout << p << " [ options ] <server> <cooler> { on | off }"
 		<< std::endl;
-	std::cout << p << " [ options ] <server> dewheater <cooler> <value>"
+	std::cout << p << " [ options ] <server> <cooler> set <temperature>"
+		<< std::endl;
+	std::cout << p << " [ options ] <server> <cooler> dewheater <value>"
 		<< std::endl;
 	std::cout << std::endl;
 }
@@ -42,11 +48,21 @@ static struct option	longopts[] = {
 { NULL,		0,				NULL,		 0  }
 };
 
-int	command_help(const char *progname) {
+/**
+ * \brief Implementation of the help command
+ *
+ * \param progname	name of the program
+ */
+int	command_help(const std::string& progname) {
 	usage(progname);
 	return EXIT_SUCCESS;
 }
 
+/**
+ * \brief Implementation the list command
+ *
+ * \param devices	the devices proxy to query for coolers
+ */
 int	command_list(DevicesPrx devices) {
 	DeviceNameList  list = devices->getDevicelist(DevCOOLER);
 	std::for_each(list.begin(), list.end(),
@@ -57,15 +73,20 @@ int	command_list(DevicesPrx devices) {
 	return EXIT_SUCCESS;
 }
 
+/**
+ * \brief Implementation of the info command
+ *
+ * \param cooler	the cooler to query for info
+ */
 int	command_info(CoolerPrx cooler) {
 	std::cout << "actual temperature: ";
 	astro::Temperature	actualTemperature(cooler->getActualTemperature());
 	astro::Temperature	setTemperature(cooler->getSetTemperature());
 	std::cout << actualTemperature.celsius();
-	std::cout << "ºC" << std::endl;
+	std::cout << "°C" << std::endl;
 	std::cout << "set temperature:    ";
 	std::cout << setTemperature.celsius();
-	std::cout << "ºC" << std::endl;
+	std::cout << "°C" << std::endl;
 	std::cout << "state:              ";
 	std::cout << ((cooler->isOn()) ? "ON" : "OFF");
 	std::cout << std::endl;
@@ -77,8 +98,13 @@ int	command_info(CoolerPrx cooler) {
 	return EXIT_SUCCESS;
 }
 
+/**
+ * \brief Cooler callback implementation class
+ */
 class CoolerCallbackI : public CoolerCallback {
 	void	timestamp() {
+		astro::PrecisionTime	t;
+		std::cout << t.toString("%T.%.03f: ");
 	}
 public:
 	virtual void	updateCoolerInfo(const CoolerInfo& info,
@@ -86,9 +112,9 @@ public:
 		timestamp();
 		astro::Temperature	actualTemperature(info.actualTemperature);
 		astro::Temperature	setTemperature(info.setTemperature);
-		std::cout << "actual=" << actualTemperature.celsius() << "ºC";
+		std::cout << "actual=" << actualTemperature.celsius() << "°C";
 		std::cout << ", ";
-		std::cout << "set=" << setTemperature.celsius() << "ºC";
+		std::cout << "set=" << setTemperature.celsius() << "°C";
 		std::cout << ", ";
 		if (info.on) {
 			std::cout << "ON";
@@ -103,7 +129,7 @@ public:
 		astro::Temperature	temperature(settemperature);
 		std::cout << "new set temperature: ";
 		std::cout << temperature.celsius();
-		std::cout << "ºC" << std::endl;
+		std::cout << "°C" << std::endl;
 	}
 	virtual void	updateDewHeater(float dewheater,
 				const Ice::Current& /* current */) {
@@ -112,27 +138,55 @@ public:
 	}
 };
 
-void	signal_handler(int /* sig */) {
+/**
+ * \brief Signal handler
+ */
+void	signal_handler(int sig) {
+	debug(LOG_DEBUG, DEBUG_LOG, 0, "handling %d", sig);
 }
 
+/**
+ * \brief Implementation of the monitor command
+ *
+ * \param cooler	the cooler to monitor
+ */
 int	command_monitor(CoolerPrx cooler) {
+	// create and register the monitor callback
+	CommunicatorSingleton::connect(cooler);
 	CoolerCallbackI	*_callback = new CoolerCallbackI();
 	Ice::ObjectPtr	callbackptr = _callback;
-	Ice::CommunicatorPtr	ic = CommunicatorSingleton::get();
-	CallbackAdapter	adapter(ic);
-	Ice::Identity	ident = adapter.add(callbackptr);
-	cooler->ice_getConnection()->setAdapter(adapter.adapter());
+	Ice::Identity	ident = CommunicatorSingleton::add(callbackptr);
 	cooler->registerCallback(ident);
-	signal(SIGINT, signal_handler);
-	sleep(86400);
+
+	// install a signal handler
+	struct sigaction	sa;
+	sa.sa_handler = signal_handler;
+	sa.sa_flags = 0;
+	sigaction(SIGINT, &sa, NULL);
+	sigaction(SIGTERM, &sa, NULL);
+
+	// wait for an interrupt
+	int	rc = 0;
+	while (0 == (rc = sleep(60))) { }
+
+	// unregister
 	cooler->unregisterCallback(ident);
+	debug(LOG_DEBUG, DEBUG_LOG, 0, "monitor %s unregistered",
+		ident.name.c_str());
 	return EXIT_SUCCESS;
 }
 
+/**
+ * \brief The main function for the snowcooler program
+ *
+ * \param argc	number of arguments
+ * \param argv	argument vector
+ */
 int	main(int argc, char *argv[]) {
 	debug_set_ident("snowcooler");
 	CommunicatorSingleton	comminicator(argc, argv);
 
+	// parse the command line
 	int	c;
 	int	longindex;
 	astro::ServerName	servername;
@@ -147,39 +201,50 @@ int	main(int argc, char *argv[]) {
 			break;
 		}
 
+	// we need at least one additional argument
 	if (argc <= optind) {
 		throw std::runtime_error("command missing");
 	}
 	std::string	command(argv[optind++]);
 
+	// handle the help command
 	if (command == "help") {
 		return command_help(argv[0]);
 	}
 
+	// all other commands need a server name
 	servername = astro::ServerName(command);
-
 	if (argc <= optind) {
 		throw std::runtime_error("command missing");
 	}
 	command = std::string(argv[optind++]);
 
+	// handle thehlp command
 	if (command == "help") {
 		return command_help(argv[0]);
 	}
 
+	// all other commands need at least a devices proxy
 	Ice::CommunicatorPtr	ic = CommunicatorSingleton::get();
 	Ice::ObjectPrx	base = ic->stringToProxy(servername.connect("Devices"));
 	DevicesPrx	devices = DevicesPrx::checkedCast(base);
 
+	// handle the list command
 	if (command == "list") {
 		return command_list(devices);
 	}
 
-	if (argc <= optind) {
-		throw std::runtime_error("no cooler name");
-	}
-	std::string	coolername(argv[optind++]);
+	// all other commands need a coler
+	std::string	coolername = command;
 	CoolerPrx	cooler = devices->getCooler(coolername);
+
+	// no more arguments, handle it as an info command
+	if (argc <= optind) {
+		return command_info(cooler);
+	}
+
+	// we need a command
+	command = std::string(argv[optind++]);
 	if (command == "info") {
 		return command_info(cooler);
 	}
@@ -194,7 +259,8 @@ int	main(int argc, char *argv[]) {
 		cooler->setOn(false);
 		return EXIT_SUCCESS;
 	}
-	// the next two commands required an argument
+
+	// the next two commands required additional arguments
 	if (optind >= argc) {
 		throw std::runtime_error("need temperature");
 	}
